fixing files for gh-pages

--- a/angular.json
+++ b/angular.json
@@ -96,7 +96,10 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "baseHref": "https://tylerchasefranklin.github.io/Angular-TaskTracker/"
+          }
         }
       }
     }
