--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "homepage": "https://tylerchasefranklin.github.io/Angular-TaskTracker",
-  "name": "angular-crash",
+  "name": "angular-tasktracker",
   "version": "0.0.0",
+  "private": true,
+  "homepage": "https://tylerchasefranklin.github.io/Angular-TaskTracker",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -14,7 +13,6 @@
     "e2e": "ng e2e",
     "server": "json-server --watch db.json --port 5000"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^20.0.0",
     "@angular/common": "^20.0.0",
@@ -32,6 +30,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.1.4",
     "@angular/cli": "^20.1.4",
-    "@angular/compiler-cli": "^20.0.0"
+    "@angular/compiler-cli": "^20.0.0",
+    "angular-cli-ghpages": "^2.0.3"
   }
 }
