--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular-devkit/build-angular": "^20.1.4",
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.0.0",
-    "angular-cli-ghpages": "^2.0.3"
+    "angular-cli-ghpages": "^2.0.3",
+    "json-server": "^1.0.0-beta.3"
   }
 }
